--- a/S05 - Recommender Systems/BLU12 - Workflow/requirements.txt
+++ b/S05 - Recommender Systems/BLU12 - Workflow/requirements.txt
@@ -8,7 +8,7 @@ pandas==1.4.2
 scikit_learn==0.24.2
 matplotlib==3.4.2
 
-#lightFM==1.16
-#scikit-surprise==1.1.3
+lightFM==1.16
+scikit-surprise==1.1.3
 ml_metrics==0.1.4
 psutil==5.9.4
